--- a/clinicaOdonto/src/main/resources/application.properties
+++ b/clinicaOdonto/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.h2.console.enabled = true
 spring.sql.init.platform = h2
-spring.datasource.url = jdbc:h2:mem:estudantes
+spring.datasource.url = jdbc:h2:mem:clinica
+spring.jpa.show-sql=true
