--- a/clinicaOdonto/src/main/resources/application.properties
+++ b/clinicaOdonto/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.h2.console.enabled = true
 spring.sql.init.platform = h2
 spring.datasource.url = jdbc:h2:mem:clinica
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
