--- a/clinicaOdonto/src/main/resources/application.properties
+++ b/clinicaOdonto/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled = true
 spring.sql.init.platform = h2
 spring.datasource.url = jdbc:h2:mem:clinica
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
