--- a/clinicaOdonto/pom.xml
+++ b/clinicaOdonto/pom.xml
@@ -65,6 +65,33 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.restdocs</groupId>
+			<artifactId>spring-restdocs-mockmvc</artifactId>
+			<version>2.0.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.testerum</groupId>
+			<artifactId>testerum-runner</artifactId>
+			<version>1.1-pre-alpha-21</version>
+			<type>pom</type>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit</groupId>
+			<artifactId>junit4-runner</artifactId>
+			<version>5.0.0-ALPHA</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
 		<dependency>
 			<groupId>com.auth0</groupId>
